// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should match snapshot for development 1`] = `
Object {
  "context": "src",
  "devServer": Object {
    "contentBase": "dist",
    "historyApiFallback": true,
    "host": "0.0.0.0",
    "port": 9000,
    "stats": "minimal",
  },
  "devtool": "cheap-module-eval-source-map",
  "entry": "./index.jsx",
  "module": Object {
    "rules": Array [
      Object {
        "enforce": "pre",
        "exclude": /\\(node_modules\\|dist\\)/,
        "loader": "eslint-loader",
        "options": Object {
          "failOnError": false,
          "fix": true,
          "rules": Object {
            "no-console": 0,
          },
        },
        "test": /\\\\\\.\\(js\\|jsx\\)\\$/,
      },
      Object {
        "exclude": /\\(node_modules\\|dist\\)/,
        "test": /\\\\\\.\\(js\\|jsx\\)\\$/,
        "use": "babel-loader",
      },
    ],
  },
  "output": Object {
    "filename": "[name].js",
    "path": "dist",
    "publicPath": "/",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "IS_PRODUCTION": "false",
      },
    },
    ModuleConcatenationPlugin {
      "options": Object {},
    },
    Object {
      "apply": [Function],
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": true,
        "inject": true,
        "minify": false,
        "showErrors": true,
        "template": "src/index.html",
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`Should match snapshot for production 1`] = `
Object {
  "context": "src",
  "devServer": Object {
    "contentBase": "dist",
    "historyApiFallback": true,
    "host": "0.0.0.0",
    "port": 9000,
    "stats": "minimal",
  },
  "devtool": "hidden-source-map",
  "entry": "./index.jsx",
  "module": Object {
    "rules": Array [
      Object {
        "enforce": "pre",
        "exclude": /\\(node_modules\\|dist\\)/,
        "loader": "eslint-loader",
        "options": Object {
          "failOnError": true,
          "fix": true,
          "rules": Object {
            "no-console": Array [
              2,
              Object {
                "allow": Array [
                  "warn",
                  "error",
                ],
              },
            ],
          },
        },
        "test": /\\\\\\.\\(js\\|jsx\\)\\$/,
      },
      Object {
        "exclude": /\\(node_modules\\|dist\\)/,
        "test": /\\\\\\.\\(js\\|jsx\\)\\$/,
        "use": "babel-loader",
      },
    ],
  },
  "output": Object {
    "filename": "[name].js",
    "path": "dist",
    "publicPath": "/",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "IS_PRODUCTION": "true",
      },
    },
    ModuleConcatenationPlugin {
      "options": Object {},
    },
    Object {
      "apply": [Function],
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": true,
        "inject": true,
        "minify": false,
        "showErrors": true,
        "template": "src/index.html",
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;
